--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,11 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  background: #000000;
+  background: linear-gradient(271deg, #ffffff, #000000, #9d9797);
+  background-size: 600% 600%;
+  -webkit-animation: AnimationName 35s ease infinite;
+  -moz-animation: AnimationName 35s ease infinite;
+  animation: AnimationName 35s ease infinite;
   color: #ffffff;
   min-height: 100vh;
   padding: 20px;
@@ -330,5 +334,41 @@ h1 {
   .action-btn {
     padding: 14px 16px;
     font-size: 0.8rem;
+  }
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 84%;
+  }
+  50% {
+    background-position: 100% 17%;
+  }
+  100% {
+    background-position: 0% 84%;
+  }
+}
+
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 84%;
+  }
+  50% {
+    background-position: 100% 17%;
+  }
+  100% {
+    background-position: 0% 84%;
+  }
+}
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 84%;
+  }
+  50% {
+    background-position: 100% 17%;
+  }
+  100% {
+    background-position: 0% 84%;
   }
 }
